# calculadora

./: app.py  app1.py  funcion.py  pyproject.toml
