[project]
name = "proyevto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "plotly>=6.8.0",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "streamlit-lottie>=0.0.5",
    "streamlit-option-menu>=0.4.0",
    "sympy>=1.14.0",
]
